--- a/product-microservice/src/main/resources/application.properties
+++ b/product-microservice/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.application.name=product-microservice
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
+
+spring.application.name=product-microservice
+
+server.port=0
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
