--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.config.import=optional:config-credentials.properties
 spring.application.name=config-server
+server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/Jordycamacho/service-configuration
+spring.cloud.config.server.git.username=${GITHUB_USERNAME}
+spring.cloud.config.server.git.password=${GITHUB_TOKEN}
+spring.cloud.config.server.git.clone-on-start=true
