[IMP] configuraciones de booking-microservice y Product-microservice

--- a/product-microservice/src/main/resources/application.properties
+++ b/product-microservice/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/productdb
-
+spring.cloud.config.profile=dev
 spring.application.name=product-microservice
 
 server.port=0
