--- a/booking-microservice/src/main/resources/application.properties
+++ b/booking-microservice/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.application.name=booking
-spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
-spring.datasource.username=root
-spring.datasource.password=012890
+spring.cloud.config.profile=dev
+spring.application.name=booking-microservice
+
 
 server.port=0
 
