--- a/booking-microservice/src/main/resources/bootstrap.properties
+++ b/booking-microservice/src/main/resources/bootstrap.properties
@@ -1,1 +1,6 @@
 spring.cloud.config.uri=http://localhost:8888
+management.endpoints.web.exposure.include=*
+spring.cloud.config.profile=dev
+spring.application.name=booking-microservice
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
