--- a/product-microservice/pom.xml
+++ b/product-microservice/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		
 	</dependencies>
 
 
