--- a/booking-microservice/pom.xml
+++ b/booking-microservice/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-vault-config</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
