--- a/booking-microservice/src/main/resources/bootstrap.properties
+++ b/booking-microservice/src/main/resources/bootstrap.properties
@@ -4,3 +4,9 @@ spring.cloud.config.profile=dev
 spring.application.name=booking-microservice
 server.port=0
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+spring.cloud.vault.application-name=booking-microservice
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
