--- a/booking-microservice/pom.xml
+++ b/booking-microservice/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>spring-cloud-starter-vault-config</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 		
 	</dependencies>
 
