--- a/product-microservice/pom.xml
+++ b/product-microservice/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 		
 	</dependencies>
 
