--- a/product-microservice/src/main/resources/bootstrap.properties
+++ b/product-microservice/src/main/resources/bootstrap.properties
@@ -6,3 +6,8 @@ spring.application.name=product-microservice
 server.port=0
 
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
