[imp] configuracion de seguridad terminado

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -9,4 +9,9 @@ spring.cloud.gateway.mvc.routes[1].id=booking-microservice
 spring.cloud.gateway.mvc.routes[1].uri=lb://BOOKING-MICROSERVICE
 spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/booking/**
 
-
+spring.security.oauth2.client.provider.keyclook.issuer-uri=http://localhost:9090/realms/microservice-reaim
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-id=spring-cloud-gateway-client
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-secret=LiMGA6B4mOhZ5uN06eQDmfEjny6v18vb
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.provider=keycloak
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.redirect-uri=http://localhost:8080/lifing/oauth2/code/spring/cloud-gateway-client
