--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-security</artifactId>
+			<version>2.2.4.RELEASE</version>
+		</dependency>
+				
 		
 	</dependencies>
 	<dependencyManagement>
