--- a/product-microservice/pom.xml
+++ b/product-microservice/pom.xml
@@ -74,6 +74,24 @@
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-resource-server</artifactId>
+			<version>6.2.5</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+			<version>6.2.5</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.2.7</version>
+		</dependency>
 		
 	</dependencies>
 
