--- a/product-microservice/src/main/resources/bootstrap.properties
+++ b/product-microservice/src/main/resources/bootstrap.properties
@@ -11,3 +11,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/microservice-reaim
